# ytbtimecodes

./: .gitignore  README.md  download.py  poetry-local.sh  pyproject.toml  save-requirement.sh  timecodes.ipynb
.github/workflows/: python-publish.yml
samples/: Bn1gPEoEHcI.txt  mCwaDBYOpT0.txt
src/: localinstall-pypi.sh  pyproject.toml
src/ytbtimecodes /: main.py
ytbtimecodes/: timecodes.py
