
[tool.poetry]
name = "ytbtimecodes"
version = "1.3"
description = "ytbtimecodes"
authors = ["Andrew Levin <your.email@example.com>"]
license = "MIT"
homepage = "https://github.com/andrewalevin/ytbtimecodes"
packages = [{include = "ytbtimecodes"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
